objects/Field_Inventory__c.object
<CustomObject>
    <description>This is the main field instrument or system record. Linked to this record may be one or more related items which make up the entire package or system.</description>
    <label>Field Inventory</label>
    <nameField>
        <label>Field Inventory</label>
        <type>Text</type>
    </nameField>
    <pluralLabel>Field Inventory</pluralLabel>
    <sharingModel>ReadWrite</sharingModel>
    <fields>
        <fullName>IGOR__c</fullName>
        <label>IGOR</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Type__c</fullName>
        <label>Type</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>DEMO</fullName>
                </value>
                <value>
                    <fullName>USED</fullName>
                </value>
                <value>
                    <fullName>EXPENSED</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>User__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Assigned To</label>
        <referenceTo>User</referenceTo>
        <relationshipName>R00N30000000hNukEAE</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Plant__c</fullName>
        <label>Plant</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CA13</fullName>
                </value>
                <value>
                    <fullName>US13</fullName>
                </value>
                <value>
                    <fullName>1BE3</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Status__c</fullName>
        <label>Status</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Not Yet For Sale</fullName>
                </value>
                <value>
                    <fullName>Available for Sale</fullName>
                </value>
                <value>
                    <fullName>Customer Site</fullName>
                </value>
                <value>
                    <fullName>Requires Service</fullName>
                </value>
                <value>
                    <fullName>Sold - Shipped</fullName>
                </value>
                <value>
                    <fullName>Sold - Pending Shipment</fullName>
                </value>
                <value>
                    <fullName>On Order</fullName>
                </value>
                <value>
                    <fullName>Not Found</fullName>
                </value>
                <value>
                    <fullName>Relieved</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Comment__c</fullName>
        <label>Comment</label>
        <length>5000</length>
        <type>LongTextArea</type>
    </fields>
    <fields>
        <fullName>Item_Tag__c</fullName>
        <label>Item Tag</label>
        <precision>5</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Material__c</fullName>
        <label>Material</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Warranty__c</fullName>
        <formula>if(ispickval( Type__c,&quot;DEMO&quot;),&quot;INSTALL AND WARRANTY INCLUDED&quot;,&quot;MUST QUOTE SEPARATE INSTALL AND WARRANTY&quot;)</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Warranty</label>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Sent__c</fullName>
        <label>Date Sent</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Sold__c</fullName>
        <label>Date Sold</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>SAP_Order__c</fullName>
        <label>SAP Order #</label>
        <length>10</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Territory__c</fullName>
        <label>Territory</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>Americas</fullName>
                </value>
                <value>
                    <fullName>Pac Rim</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>List_Price__c</fullName>
        <label>List Price</label>
        <summarizedField>Inventory_Items__c.List_Price__c</summarizedField>
        <summaryForeignKey>Inventory_Items__c.Field_Inventory__c</summaryForeignKey>
        <summaryOperation>sum</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Sales_Team__c</fullName>
        <label>Sales Team</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>CA10 ANALYTICAL</fullName>
                </value>
                <value>
                    <fullName>US10 NorthEast</fullName>
                </value>
                <value>
                    <fullName>US10 MidAtlantic</fullName>
                </value>
                <value>
                    <fullName>US10 South</fullName>
                </value>
                <value>
                    <fullName>US10 MidWest</fullName>
                </value>
                <value>
                    <fullName>US10 West</fullName>
                </value>
                <value>
                    <fullName>CA10 LST</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Consignment__c</fullName>
        <defaultValue>false</defaultValue>
        <label>Consignment</label>
        <type>Checkbox</type>
    </fields>
    <fields>
        <fullName>Cost_Center__c</fullName>
        <label>Cost Center</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>ShipTo_Name__c</fullName>
        <label>ShipTo Name</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Product_Line__c</fullName>
        <label>Product Line</label>
        <type>Picklist</type>
        <valueSet>
            <controllingField>Marketing_Business_Unit__c</controllingField>
            <valueSetDefinition>
                <sorted>true</sorted>
                <value>
                    <fullName>AA</fullName>
                </value>
                <value>
                    <fullName>ANP</fullName>
                </value>
                <value>
                    <fullName>APS</fullName>
                </value>
                <value>
                    <fullName>AWS</fullName>
                </value>
                <value>
                    <fullName>CSA</fullName>
                </value>
                <value>
                    <fullName>DIA</fullName>
                </value>
                <value>
                    <fullName>DIS</fullName>
                </value>
                <value>
                    <fullName>ESS</fullName>
                </value>
                <value>
                    <fullName>GC</fullName>
                </value>
                <value>
                    <fullName>HCS</fullName>
                </value>
                <value>
                    <fullName>HTS</fullName>
                </value>
                <value>
                    <fullName>ICP</fullName>
                </value>
                <value>
                    <fullName>IR</fullName>
                </value>
                <value>
                    <fullName>LC</fullName>
                </value>
                <value>
                    <fullName>LVI</fullName>
                </value>
                <value>
                    <fullName>MAS</fullName>
                </value>
                <value>
                    <fullName>MLD</fullName>
                </value>
                <value>
                    <fullName>NEO</fullName>
                </value>
                <value>
                    <fullName>PGI</fullName>
                </value>
                <value>
                    <fullName>PRE</fullName>
                </value>
                <value>
                    <fullName>RAM</fullName>
                </value>
                <value>
                    <fullName>RRD</fullName>
                </value>
                <value>
                    <fullName>RRS</fullName>
                </value>
                <value>
                    <fullName>SPS</fullName>
                </value>
                <value>
                    <fullName>TEA</fullName>
                </value>
                <value>
                    <fullName>UVS</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Sales_Region__c</fullName>
        <label>Sales Region</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>NORTH AMERICA</fullName>
                </value>
                <value>
                    <fullName>NAAS West</fullName>
                </value>
                <value>
                    <fullName>LA South</fullName>
                </value>
                <value>
                    <fullName>LA North</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
    <fields>
        <fullName>Age_in_Months__c</fullName>
        <formula>(today()-Date_Received__c)/30</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>Age</label>
        <precision>18</precision>
        <scale>0</scale>
        <type>Number</type>
    </fields>
    <fields>
        <fullName>Date_Received__c</fullName>
        <label>Date Received</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Date_Returned__c</fullName>
        <label>Date Returned</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>NumberOfItems__c</fullName>
        <description>Number of related materials which make up this inventory system</description>
        <label>ItemCnt</label>
        <summaryForeignKey>Inventory_Items__c.Field_Inventory__c</summaryForeignKey>
        <summaryOperation>count</summaryOperation>
        <type>Summary</type>
    </fields>
    <fields>
        <fullName>Serial_Number__c</fullName>
        <label>Serial Number</label>
        <length>40</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Date_Transfered__c</fullName>
        <label>Date Transfered</label>
        <type>Date</type>
    </fields>
    <fields>
        <fullName>Current_Location__c</fullName>
        <label>Current Location</label>
        <length>30</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>Customer_Contact__c</fullName>
        <deleteConstraint>SetNull</deleteConstraint>
        <label>Customer Contact</label>
        <referenceTo>Contact</referenceTo>
        <relationshipName>R00N30000000rM6NEAU</relationshipName>
        <type>Lookup</type>
    </fields>
    <fields>
        <fullName>Customer_Details__c</fullName>
        <label>Customer Details</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Storage_Location__c</fullName>
        <label>Storage Location</label>
        <length>15</length>
        <type>Text</type>
    </fields>
    <fields>
        <fullName>System_List_Price__c</fullName>
        <label>System List Price</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>xDiscounted_Price__c</fullName>
        <formula>if(Age_in_Months__c &lt; 6, System_List_Price__c ,
if(Age_in_Months__c &lt;19, round((System_List_Price__c * (1-Age_in_Months__c *0.015)),0),
if(Age_in_Months__c &lt;25, round((System_List_Price__c * (1-Age_in_Months__c *0.02)),0),
round((System_List_Price__c *0.52),0))))</formula>
        <formulaTreatBlanksAs>BlankAsZero</formulaTreatBlanksAs>
        <label>xDiscounted Price</label>
        <precision>18</precision>
        <scale>2</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Special_Sell_Price__c</fullName>
        <label>Special Sell Price</label>
        <precision>8</precision>
        <scale>0</scale>
        <type>Currency</type>
    </fields>
    <fields>
        <fullName>Material_Description__c</fullName>
        <label>Material Description</label>
        <type>TextArea</type>
    </fields>
    <fields>
        <fullName>Marketing_Business_Unit__c</fullName>
        <label>Marketing Business Unit</label>
        <type>Picklist</type>
        <valueSet>
            <valueSetDefinition>
                <value>
                    <fullName>ANALYTICAL SCIENCES</fullName>
                </value>
                <value>
                    <fullName>SPECIALTY DIAGNOSTICS</fullName>
                </value>
                <value>
                    <fullName>LIFE SCIENCE TECHNOLOGIES</fullName>
                </value>
                <value>
                    <fullName>GENERAL</fullName>
                </value>
            </valueSetDefinition>
        </valueSet>
    </fields>
</CustomObject>